Monitoring working with rough HTML